--- a/style.css
+++ b/style.css
@@ -5,12 +5,9 @@
 
 .background {
     z-index: -1;
-    opacity: 0.3;
-    background-image: url("./icon.png");
+    opacity: 1.0;
+    background-color: white;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: 80% 50%;
-    background-size: 50% auto;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -19,6 +16,7 @@
 
 .title {
     font-size: 2.5em;
+    text-align: center;
     font-weight: bold;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
@@ -30,10 +28,12 @@
 }
 
 .explanation {
+    text-align: center;
     font-family: 'Verdana'
 }
 
 .form {
+    text-align: center;
     font-family: 'Verdana'
 }
 
@@ -49,6 +49,7 @@
 
 .input {
     font-size: 1em;
+    text-align: center;
     padding: 10px;
 }
 
@@ -61,6 +62,7 @@
     font-family: 'Arial Black';
     padding: 12px;
     cursor: pointer;
+    align-items: center;
     background-color: purple;
     color: white;
     border: 1px solid #ccc;
