--- a/faq/style.css
+++ b/faq/style.css
@@ -1,5 +1,10 @@
 .main {
     text-align: center;
+    color: white;
+    background-color: #202020;
     font-family: 'Verdana'
 }
 
+.body {
+    background-color: #202020;
+}
