--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .background {
     z-index: -1;
     opacity: 1.0;
-    background-color: white;
+    background-color: #202020;
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
@@ -16,6 +16,7 @@
 
 .title {
     font-size: 2.5em;
+    color: white;
     text-align: center;
     font-weight: bold;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
@@ -29,11 +30,13 @@
 
 .explanation {
     text-align: center;
+    color: white;
     font-family: 'Verdana'
 }
 
 .form {
     text-align: center;
+    color: white;
     font-family: 'Verdana'
 }
 
@@ -49,6 +52,7 @@
 
 .input {
     font-size: 1em;
+    color: #202020;
     text-align: center;
     padding: 10px;
 }
@@ -63,7 +67,7 @@
     padding: 12px;
     cursor: pointer;
     align-items: center;
-    background-color: purple;
+    background-color: #202020;
     color: white;
     border: 1px solid #ccc;
     box-shadow: -0.5px -0.5px 2px 2px gray;
